2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Insured_Cost3_per__c.field-meta.xml
<CustomField>
    <fullName>Insured_Cost3_per__c</fullName>
    <formula>IF(DATEVALUE(CreatedDate) &lt;= DATE(2020,11,30),
IF( ISPICKVAL( Item_Type3__c ,&quot;Non-Fragile&quot;)&amp;&amp; ISPICKVAL( Job_Type__c ,&quot;Installation Only&quot; ),0.000125,
IF( ISPICKVAL( Item_Type3__c ,&quot;Non-Fragile&quot;)&amp;&amp; ISPICKVAL( Job_Type__c ,&quot;Installation with Hoisting&quot; ),0.00025,0
)),
If(DATEVALUE(CreatedDate) &gt;= DATE(2020,12,1) &amp;&amp; DATEVALUE(CreatedDate) &lt;= DATE(2021,9,30),

IF( ISPICKVAL( Item_Type3__c ,&quot;Non-Fragile&quot;)&amp;&amp; ISPICKVAL( Job_Type__c ,&quot;Installation Only&quot; ),0.000131,0),
If(DATEVALUE(CreatedDate) &gt;= DATE(2021,10,1),

IF( ISPICKVAL( Item_Type3__c ,&quot;Non-Fragile&quot;)&amp;&amp; ISPICKVAL( Job_Type__c ,&quot;Installation Only&quot; ),0.000125,
IF( ISPICKVAL( Item_Type3__c ,&quot;Non-Fragile&quot;)&amp;&amp; ISPICKVAL( Job_Type__c ,&quot;Installation with Hoisting&quot; ),0.00025,
IF( ISPICKVAL( Item_Type3__c ,&quot;Non-Fragile&quot;)&amp;&amp; ISPICKVAL( Job_Type__c ,&quot;Installation/Hoisting&quot; ),0.0001376,
IF( ISPICKVAL( Item_Type3__c ,&quot;Non-Fragile&quot;)&amp;&amp; ISPICKVAL( Job_Type__c ,&quot;Installation/Hoisting (Auction House)&quot; ),0.0001379,0
)))),0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Cost %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>