2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Insured_Cost_hoist__c.field-meta.xml
<CustomField>
    <fullName>Insured_Cost_hoist__c</fullName>
    <formula>Insured_Value3__c  *  Insured_Cost3_per__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>