2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Insured_Value3__c.field-meta.xml
<CustomField>
    <fullName>Insured_Value3__c</fullName>
    <description>Policy Issuance Date for Installation+Hoisting Job</description>
    <label>Insured Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>