2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Insured_Value__c.field-meta.xml
<CustomField>
    <fullName>Insured_Value__c</fullName>
    <label>Insured Value</label>
    <type>TextArea</type>
</CustomField>