2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <inlineHelpText>Based on the date on the hardcopy invoice from accounts.</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>