2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Invoice_Packing__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Packing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice &amp; Packing</label>
    <type>Checkbox</type>
</CustomField>