2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/ISS_FSC_SGD_Air__c.field-meta.xml
<CustomField>
    <fullName>ISS_FSC_SGD_Air__c</fullName>
    <formula>Chargeable_Weight_kg__c  *  ISS_FSC_SGD_Unit_Cost_Air__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISS/FSC (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>