2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Item_Type3__c.field-meta.xml
<CustomField>
    <fullName>Item_Type3__c</fullName>
    <description>For Installation+Hoisting Job</description>
    <inlineHelpText>For fragile items, please contact insurance agent for rates.</inlineHelpText>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Fragile</fullName>
                <default>true</default>
                <label>Non-Fragile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>