2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type (F)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fragile (Incl. Jewelry)</fullName>
                <default>true</default>
                <label>Fragile (Incl. Jewelry)</label>
            </value>
            <value>
                <fullName>Non-Fragile</fullName>
                <isActive>false</isActive>
                <label>Non-Fragile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>