2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Job_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Completion_Date__c</fullName>
    <label>Job Completion Date</label>
    <type>Date</type>
</CustomField>