2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <label>Job Description</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>