2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation Only</fullName>
            </value>
            <value>
                <fullName>Installation with Hoisting</fullName>
            </value>
            <value>
                <fullName>Installation/Hoisting</fullName>
            </value>
            <value>
                <fullName>Installation/Hoisting (Auction House)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>