2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/JROppRecordType__c.field-meta.xml
<CustomField>
    <fullName>JROppRecordType__c</fullName>
    <formula>Opportunity__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JROppRecordType</label>
    <type>Text</type>
</CustomField>