2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/LCL_Freight__c.field-meta.xml
<CustomField>
    <fullName>LCL_Freight__c</fullName>
    <formula>Freight_Unit_Cost_LCL__c *  Chargeable_Volume_cbm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LCL Freight (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>