2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Markup3__c.field-meta.xml
<CustomField>
    <fullName>Markup3__c</fullName>
    <formula>Amount_Quoted3__c  -  Insured_Cost_hoist__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>