2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Markup_NF__c.field-meta.xml
<CustomField>
    <fullName>Markup_NF__c</fullName>
    <formula>Amount_Quoted_2__c - Insured_Cost3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup (NF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>