2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Mode_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Shipment__c</fullName>
    <label>Mode of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Sea</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>