2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Job References</relationshipLabel>
    <relationshipName>Job_References</relationshipName>
    <type>Lookup</type>
</CustomField>