2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/OppStage__c.field-meta.xml
<CustomField>
    <fullName>OppStage__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppStage</label>
    <type>Text</type>
</CustomField>