2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Other_Charges_Air__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Air__c</fullName>
    <label>Other Charges-Air (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>