2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Other_OFA_Air__c.field-meta.xml
<CustomField>
    <fullName>Other_OFA_Air__c</fullName>
    <description>For indication of other Outward Forwarder Agent not in the picklist</description>
    <inlineHelpText>Name of other OFA</inlineHelpText>
    <label>Others (Air)</label>
    <length>99</length>
    <type>Text</type>
</CustomField>