2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Others_OFA_FCL__c.field-meta.xml
<CustomField>
    <fullName>Others_OFA_FCL__c</fullName>
    <inlineHelpText>Name of other OFA</inlineHelpText>
    <label>Others (FCL)</label>
    <length>99</length>
    <type>Text</type>
</CustomField>