2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Outward_Forwarder_Agent_Air__c.field-meta.xml
<CustomField>
    <fullName>Outward_Forwarder_Agent_Air__c</fullName>
    <label>Outward Forwarder Agent (Air)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWOT Global Logistics (S) Pte Ltd</fullName>
            </value>
            <value>
                <fullName>DHL Express (Singapore) Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Federal Express (Singapore) Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Freight Mark Logistics (S) Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Global Container Freight Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Mayor Express Freight Services Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Speedmark Air Transportation Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Sky Leader Freight Pte Ltd</fullName>
            </value>
            <value>
                <fullName>TNK Global</fullName>
            </value>
            <value>
                <fullName>Yusen Logistics (Singapore) Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Others (indicate below)</fullName>
            </value>
            <value>
                <fullName>Ben Art Trans Enterprise</fullName>
                <isActive>false</isActive>
                <label>Ben Art Trans Enterprise</label>
            </value>
            <value>
                <fullName>C &amp; G Express Pte Ltd</fullName>
                <isActive>false</isActive>
                <label>C &amp; G Express Pte Ltd</label>
            </value>
            <value>
                <fullName>CEVA Logistics Singapore Pte Ltd</fullName>
                <isActive>false</isActive>
                <label>CEVA Logistics Singapore Pte Ltd</label>
            </value>
            <value>
                <fullName>CWT Globalink Pte Ltd</fullName>
                <isActive>false</isActive>
                <label>CWT Globalink Pte Ltd</label>
            </value>
            <value>
                <fullName>ECU-Worldwide (Singapore) Pte Ltd</fullName>
                <isActive>false</isActive>
                <label>ECU-Worldwide (Singapore) Pte Ltd</label>
            </value>
            <value>
                <fullName>Mac-Nels Lines (S) Pte Ltd</fullName>
                <isActive>false</isActive>
                <label>Mac-Nels Lines (S) Pte Ltd</label>
            </value>
            <value>
                <fullName>PAL Line Pte Ltd</fullName>
                <isActive>false</isActive>
                <label>PAL Line Pte Ltd</label>
            </value>
            <value>
                <fullName>Penanshin Shipping Pte Ltd</fullName>
                <isActive>false</isActive>
                <label>Penanshin Shipping Pte Ltd</label>
            </value>
            <value>
                <fullName>Shipco Transport Pte Ltd</fullName>
                <isActive>false</isActive>
                <label>Shipco Transport Pte Ltd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>