2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Outward_Forwarder_Agent_LCL__c.field-meta.xml
<CustomField>
    <fullName>Outward_Forwarder_Agent_LCL__c</fullName>
    <label>Outward Forwarder Agent (LCL)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C &amp; G Express Pte Ltd</fullName>
            </value>
            <value>
                <fullName>CWT Globelink Pte Ltd</fullName>
            </value>
            <value>
                <fullName>ECU-Worldwide (Singapore) Pte. Ltd.</fullName>
            </value>
            <value>
                <fullName>Global Container Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Mac-Nels Line (S) Pte Ltd</fullName>
            </value>
            <value>
                <fullName>PAL Line Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Penanshin Shipping Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Shipco Transport Pte Ltd</fullName>
            </value>
            <value>
                <fullName>TNK Global</fullName>
            </value>
            <value>
                <fullName>Others (indicate below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>