2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Packed_Dimensions_cm__c.field-meta.xml
<CustomField>
    <fullName>Packed_Dimensions_cm__c</fullName>
    <label>Packed Dimensions (cm)</label>
    <length>1600</length>
    <type>LongTextArea</type>
</CustomField>