2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>TextArea</type>
</CustomField>