2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>