2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Permit_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Permit_Expiry_Date__c</fullName>
    <label>Permit Expiry Date</label>
    <type>Date</type>
</CustomField>