2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Permit_Status__c.field-meta.xml
<CustomField>
    <fullName>Permit_Status__c</fullName>
    <label>Permit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Offset II</fullName>
            </value>
            <value>
                <fullName>Offset OO</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temp Export</fullName>
            </value>
            <value>
                <fullName>Temp Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>