2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Physical_File_Location__c.field-meta.xml
<CustomField>
    <fullName>Physical_File_Location__c</fullName>
    <label>Physical File Location</label>
    <length>12</length>
    <type>Text</type>
</CustomField>