2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Policy_Issuance_Date2__c.field-meta.xml
<CustomField>
    <fullName>Policy_Issuance_Date2__c</fullName>
    <label>Policy Issuance Date (NF)</label>
    <type>Date</type>
</CustomField>