2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Policy_Issuance_Date3__c.field-meta.xml
<CustomField>
    <fullName>Policy_Issuance_Date3__c</fullName>
    <description>Policy Issuance Date for Installation+Hoisting Job</description>
    <label>Policy Issuance Date</label>
    <type>Date</type>
</CustomField>