2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Push_Job_Info__c.field-meta.xml
<CustomField>
    <fullName>Push_Job_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pushed JobReference Info</label>
    <type>Checkbox</type>
</CustomField>