2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>