2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Shipper_Name_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name_Address_2__c</fullName>
    <label>Shipper Name &amp; Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>