2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Shipping_Advice__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Advice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Advice</label>
    <type>Checkbox</type>
</CustomField>