2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <label>Test CreatedDate</label>
    <type>DateTime</type>
</CustomField>